Fri May 20 01:24:33 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/extconf.rb: check rl_vi_editing_mode() and
	  rl_emacs_editing_mode().

Thu May 19 23:33:09 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/readline.c: supported libedit. fixed: [ruby-core:4858]

	* ext/readline/extconf.rb: added new option --enable-libedit.

	* test/readline/test_readline.rb: added assertions for
	  Readline::HISTORY.

	* lib/irb/input-method.rb: do not use Readline::HISTORY.pop.

Wed May 18 23:42:25 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exc_exception): reverted to call Exception#initialize
	  directly.  fixed: [ruby-dev:26177]

Wed May 18 17:38:51 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* dir.c (glob_helper): check whether path is "" before calling
	  do_opendir.  [ruby-dev:26183]

Wed May 18 13:40:48 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (NtInitialize): fix typo.

Wed May 18 11:07:47 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): get rid of using String.  [ruby-dev:26180]

	* eval.c (ruby_options), win32/win32.c (NtInitialize): move argument
	  intialization back.  [ruby-dev:26180]

Tue May 17 11:49:18 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (unixtime_to_filetime): use localtime() instead of
	  gmtime() when using FileLocalTimeToFileTime().

Mon May 16 22:42:52 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.h, {bcc32,win32,wince}/Makefile.sub: moved rb_[ugp]id_t
	  to get rid of redefinition warnings on mingw.

	* class.c (rb_class_init_copy): singleton class is disallowed to copy,
	  from its definition.  fixed: [ruby-talk:142749]

	* parse.y (pragma_encoding): add prototype to suppress false warning
	  by VC.

	* process.c (proc_spawn_v): use rb_w32_aspawn on Win32.

Mon May 16 03:29:01 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.{h,c}: define rb_{p,g,u}id_t.

Mon May 16 00:21:02 2005  Tanaka Akira  <akr@m17n.org>
